# lumen

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  BUILDING.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  README.txt  docker-compose.yml  justfile
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: cluster.rs  engine.rs  error.rs  handlers.rs  lib.rs  main.rs
crates/api/tests/: server.rs
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: cluster.rs  conformance.rs  lib.rs  log_store.rs  network.rs  state_machine.rs  type_config.rs
crates/cluster/tests/: lifecycle.rs  network.rs
crates/core/: Cargo.toml
crates/core/src/: catalog.rs  collection.rs  document.rs  error.rs  lib.rs  log.rs  mapping.rs  search.rs  sync.rs  wal.rs
crates/core/tests/: catalog_reopen.rs  document_ops.rs  mapping_reopen.rs  search.rs  snapshot.rs  wal_recovery.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: lumen.proto  raft.proto
crates/proto/src/: conversions.rs  lib.rs
docker/: bootstrap.sh
docs/architecture/: ADR-001-architecture-decisions.md
scripts/: smoke.sh
