[package]
name = "lumen-api"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[[bin]]
name = "lumen"
path = "src/main.rs"

[dependencies]
lumen-core = { path = "../core" }
lumen-cluster = { path = "../cluster" }
async-trait = "0.1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros", "time"] }
tower-http = { version = "0.6", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
