[package]
name = "lumen-core"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
lumen-proto = { path = "../proto" }
tantivy = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
prost = "0.13"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
